manifests/backend.yaml
# Backend Service
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: exam
  app: tuto-app  
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP

---
# Backend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: exam
  app: tuto-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: unkindled1/spring-service:v5
        ports:
        - containerPort: 8080
        readinessProbe:
          exec:
            command:
            - cat
            - /tmp/healthy
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          exec:
            command:
            - cat
            - /tmp/healthy
          initialDelaySeconds: 10
          periodSeconds: 15
        startupProbe:
          exec:
            command:
            - touch
            - /tmp/healthy  # Créer le fichier /tmp/healthy lors de la sonde de démarrage
          failureThreshold: 30
